fixed preview issues on mobile

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,33 +1,1 @@
-
-
-@font-face {
-    font-family: 'Facebook Business';
-    src: url('./facebook-business-font.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Facebook Business';
-    src: url('./facebook-business-font.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Facebook Business';
-    src: url('./facebook-business-font.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Facebook Business';
-    src: url('./facebook-business-font.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
+/* Custom fonts will be added here if needed */
